# TEnterns

kitting-error-tracker/: .gitignore  README.md  pyproject.toml
kitting-error-tracker/configs/: pipeline.yaml
kitting-error-tracker/scripts/: run_local.py
kitting-error-tracker/src/kitting_cv/: __init__.py
kitting-error-tracker/src/kitting_cv/pipeline/: __init__.py  run_pipeline.py
kitting-error-tracker/src/kitting_cv/segmentation/: __init__.py  bin_segmenter.py
kitting-error-tracker/src/kitting_cv/tracking/: __init__.py  mediapipe_tracker.py
